--- a/css/style.ORIG.css
+++ b/css/style.ORIG.css
@@ -378,11 +378,11 @@ p {
 }
 
 .background-1 {
-	background-image: url("../img/waterfall.jpg");
+	background-image: url("../img/photo-6.jpg");
 }
 
 .background-2 {
-	background-image: url("../img/spider.jpg");
+	background-image: url("../img/photo-4.jpg");
 }
 
 .split-image-right {
